# ultimate-XI

./: .gitignore  CONTEXT.md  README.md  app.py  chart.py  main.py  match_engine.py  models.py  pyproject.toml  seed.yaml  simulation.py  state_template.yaml  team.py
.claude/: settings.local.json
docs/adr/: 0001-teams-as-ephemeral-json.md
docs/issues/: 001-fit-from-position-weights.md  002-team-builder.md  003-team-json-export-import.md  004-team-vs-team-comparison.md  005-matchup-expected-goals.md  006-poisson-scoreline-distribution.md  007-chemistry-multiplier.md  008-role-weighted-fit.md  009-stochastic-match-engine.md  epic-team-vs-team-simulation.md
docs/research/: deployment-options.md  match-engine-design.md  simulation-design-decisions.md  team-comparison-methods.md
scripts/: seed_db.py
tests/: test_models.py  test_simulation.py  test_team.py
