[project]
name = "ultimate-xi"
version = "0.1.0"
description = "Rate Super Smash Bros. characters as footballers, build teams, and simulate matches."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plotly>=6.8.0",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.39",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
